k8s/order-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oficinapro
  labels:
    name: oficinapro
    environment: production
